<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="1"
    tools:context=".task4.Register">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/register"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_input"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLength="200"
                android:padding="14dp"
                android:textAlignment="textStart"
                android:textSize="14sp"
                tools:ignore="RtlCompat"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_input"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="50"
                android:padding="14dp"
                android:textAlignment="textStart"
                android:textSize="14sp"
                tools:ignore="RtlCompat"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_input"
                android:gravity="center"
                android:hint="@string/gender"
                android:inputType="text"
                android:maxLength="1500"
                android:maxLines="5"
                android:padding="14dp"
                android:textAlignment="textStart"
                android:textSize="14sp"
                tools:ignore="RtlCompat"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_input"
                android:gravity="start"
                android:hint="@string/status"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="14dp"
                android:textSize="14sp"
                android:autofillHints="" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Menyimpan"
            android:textAlignment="center" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="100"
            android:progress="0" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_tombol"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>